[project]
name = "cyclopibus-mistral-vibe-web"
version = "0.1.0"
description = "A Python Web API that agglomerate multiple tools into a single API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "litestar>=2.0.0",
    "pydantic>=2.0.0",
    "uvicorn>=0.20.0",
    "httpx>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "httpx>=0.25.0",
]